--- a/Railways/src/main/webapp/user.html
+++ b/Railways/src/main/webapp/user.html
@@ -74,7 +74,7 @@ color:white;
     </style>
 </head>
 <body>
-<form action="userDetails" method="POST">
+<form action="userDetails" method="post">
 <div class="form">
         <h2>Register</h2>
         <input type="text"name="name"placeholder="name">
